pull api from raddythebrand web

--- a/public/src/views/partials/news.ejs
+++ b/public/src/views/partials/news.ejs
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node JS News</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header__logo">Node.Js News</div>
+        <div class="header__search">Search</div>
+    </header>
+
+    <div class="wrapper">
+        <div class="news">
+            <% articles.forEach(function(article, index) { %>
+                <a href="#" class="news__card">
+                    <h2>
+                        <%- article.title.rendered %>
+                    </h2>
+                    <p>
+                        <%- article.excerpt.rendered %>
+                    </p>
+                </a>
+                <% }) %>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
