--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -57,3 +57,10 @@ h2 {
         }
     }
 }
+
+.news-single {
+    background-color: #fff;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 2rem;
+}
